--- a/config.toml
+++ b/config.toml
@@ -10,13 +10,13 @@ theme = "apollo-custom"
 [extra]
 menu = [
     { name = "/posts", url = "/posts", weight = 1 },
-    { name = "/projects", url = "/projects", weight = 2 },
-    { name = "/about", url = "/about", weight = 3 },
+    { name = "/projects", url = "/projects", weight = 2 }
 ]
 
 socials = [
-    { name = "twitter", url = "https://twitter.com/not_matthias", icon = "twitter" },
-    { name = "github", url = "https://github.com/not-matthias/", icon = "github" },
+    { name = "email", url = "mailto:dhruvahuja2k@gmail.com", icon = "email" },
+    { name = "linkedin", url = "https://www.linkedin.com/in/dhruvahuja2k/", icon = "linkedin" },
+    { name = "github", url = "https://github.com/dhruv-ahuja/", icon = "github" },
 ]
 
 theme = "toggle"
