refactor: change base_url config

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://not-matthias.github.io/apollo/"
+base_url = "https://dhruv-ahuja.github.io"
 title = "dhruv-ahuja"
 build_search_index = false
 generate_feed = true
