feat: add analytics tracking and footer - overwrite theme footer with custom information - add analytics username

--- a/config.toml
+++ b/config.toml
@@ -25,5 +25,4 @@ custom_css = []
 
 [extra.analytics]
 enabled = true
-goatcounter_user = "your_user"
-goatcounter_host = "example.com" # default= goatcounter.com
+goatcounter_user = "dhruv-ahuja"
