chore: fix config and formatting
- enable syntax highlighting
- update gitmodules address
- use h2 for first post

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,10 @@ minify_html = true
 
 theme = "apollo-custom"
 
+[markdown]
+highlight_code = true
+highlight_theme = "material-dark"
+
 [extra]
 menu = [
     { name = "/posts", url = "/posts", weight = 1 },
