--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/apollo-custom"]
 	path = themes/apollo-custom
-	url = https://github.com/dhruv-ahuja/apollo.git
+	url = https://github.com/dhruv-ahuja/apollo-custom.git
