fix: give write permission to github token for deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
-# On every push this script is executed
 on: push
 name: Build and deploy GH Pages
+
+permissions:
+    id-token: write
+    contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
