feat: setup custom domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://dhruv-ahuja.github.io"
+base_url = "https://dhruvahuja.me"
 title = "dhruv-ahuja"
 build_search_index = false
 generate_feed = true
