fix: Resolve site build errors and template issues
* Remove invalid 'path' field from posts section

* Create proper template files for homepage rendering

* Fix theme integration issues

* Update configuration and content files

--- a/config.toml
+++ b/config.toml
@@ -1,20 +1,43 @@
 base_url = "https://dhruvahuja.me"
-title = "dhruv-ahuja"
-build_search_index = false
-generate_feed = true
+title = "dhruv_ahuja"
+description = "Dhruv Ahuja's Place on the Web"
+build_search_index = true
+generate_feeds = true
 compile_sass = true
 minify_html = true
+taxonomies = [{ name = "tags" }]
 
 theme = "apollo-custom"
 
+[search]
+include_title = true
+include_description = true
+include_path = true
+include_content = true
+index_format = "elasticlunr_json"
+
 [markdown]
 highlight_code = true
-highlight_theme = "material-dark"
+highlight_theme = "css"
+# highlight_theme = "material-dark"
+highlight_themes_css = [
+  { theme = "ayu-dark", filename = "syntax-theme-dark.css" },
+  { theme = "ayu-light", filename = "syntax-theme-light.css" },
+]
 
 [extra]
+theme = "toggle"              # light, dark, auto, toggle
+toc = true
+use_cdn = false
+favicon = "/icon/favicon.png"
+fancy_code = true
+dynamic_note = true           # a note that can be toggled
+mathjax = true
+mathjax_dollar_inline_enable = true
 menu = [
     { name = "/posts", url = "/posts", weight = 1 },
-    { name = "/projects", url = "/projects", weight = 2 }
+    { name = "/projects", url = "/projects", weight = 2 },
+    { name = "/tags", url = "/tags", weight = 3 },
 ]
 
 socials = [
@@ -23,10 +46,17 @@ socials = [
     { name = "github", url = "https://github.com/dhruv-ahuja/", icon = "github" },
 ]
 
-theme = "toggle"
+stylesheets = [
+    # "custom.css"    # at /static/custom.css
+]
 
-custom_css = []
+[extra.taxonomies]
+sort_by = "page_count"         # e.g. name, page_count
+reverse = true
 
 [extra.analytics]
 enabled = true
-goatcounter_user = "dhruv-ahuja"
+
+[extra.analytics.goatcounter]
+user = "dhruv-ahuja"
+# host = "example.com" # default= goatcounter.com
