feat: Increase font size and social icon size with proportional adjustments
* Increase base font size from 13.5px to 15px

* Increase social icons from 16px to 18px for better proportion

* Update custom.css with more balanced sizing

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 base_url = "https://dhruvahuja.me"
-title = "dhruv_ahuja"
+title = "dhruv-ahuja"
 description = "Dhruv Ahuja's Place on the Web"
 build_search_index = true
 generate_feeds = true
@@ -47,7 +47,7 @@ socials = [
 ]
 
 stylesheets = [
-    # "custom.css"    # at /static/custom.css
+    "custom.css"    # at /static/custom.css
 ]
 
 [extra.taxonomies]
