--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,8 @@ mathjax_dollar_inline_enable = true
 menu = [
     { name = "/posts", url = "/posts", weight = 1 },
     { name = "/projects", url = "/projects", weight = 2 },
-    { name = "/tags", url = "/tags", weight = 3 },
+    { name = "/oss", url = "/oss", weight = 3 },
+    { name = "/tags", url = "/tags", weight = 4 },
 ]
 
 socials = [
