fix page titles and improve the intro

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 base_url = "https://dhruvahuja.me"
-title = "dhruv-ahuja"
+title = "Dhruv Ahuja"
 description = "Dhruv Ahuja's Place on the Web"
 build_search_index = true
 generate_feeds = true
